# opengl_lab

./: .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
include/: renderer.hpp  shader.hpp  vertexarray.hpp  vertexbufferlayout.hpp
res/shaders/: basic.shader
src/: main.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexarray.cpp  vertexbuffer.cpp
